--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "@react-native-async-storage/async-storage": "^2.1.0",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
+    "@reduxjs/toolkit": "^2.6.0",
     "react": "18.3.1",
     "react-native": "0.75.4",
     "react-native-safe-area-context": "^4.11.0",
     "react-native-screens": "^3.34.0",
     "react-native-webview": "11.25.0",
-    "rive-react-native": "^7.3.0"
+    "rive-react-native": "^7.3.0",
+    "react-redux": "^7.2.8"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
